[gd_resource type="PackedScene" load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/story/CharacterCreation.gd" id="1"]

[node name="CharacterCreation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.06, 0.12, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Choose Your Destiny"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
text = "The kingdom awaits its heir..."
horizontal_alignment = 1

[node name="GenderContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 40

[node name="PrinceButton" type="Button" parent="VBoxContainer/GenderContainer"]
custom_minimum_size = Vector2(180, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Prince"

[node name="PrincessButton" type="Button" parent="VBoxContainer/GenderContainer"]
custom_minimum_size = Vector2(180, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Princess"

[node name="SelectionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.8, 0.85, 1.0, 1)
text = ""
horizontal_alignment = 1

[node name="NameContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="NameInput" type="LineEdit" parent="VBoxContainer/NameContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 40)
theme_override_font_sizes/font_size = 18
placeholder_text = "Enter your name..."
alignment = 1
max_length = 20

[node name="ConfirmButton" type="Button" parent="VBoxContainer/NameContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 45)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "Begin Your Journey"
